# nullnet

./: .gitignore  Cargo.toml  README.md  linux-setup.sh  setup-client.sh  setup-proxy.sh  setup-server.sh
docs/: architecture.md  (+7 more)
members/nullnet-client/: Cargo.toml  linux-setup.sh  nullnet-client.service
members/nullnet-client/.cargo/: config.toml
members/nullnet-client/docs/: nfqueue-rationale.md
members/nullnet-client/src/: cli.rs  control_channel.rs  crypto.rs  egress_policy.rs  egress_state.rs  env.rs  host_mappings.rs  main.rs  triggers.rs
members/nullnet-client/src/commands/: dnat.rs  egress.rs  mod.rs  netlink.rs  nfqueue.rs  ovs.rs
members/nullnet-client/src/ebpf/: mod.rs  triggers.rs
members/nullnet-client/src/forward/: receive.rs  send.rs
members/nullnet-client/src/nfqueue/: cache.rs  egress_listener.rs  listener.rs  mod.rs  parse.rs  recv_loop.rs
members/nullnet-client/src/peers/: peer.rs
members/nullnet-client/vxlan_scripts/: vxlan-setup.sh  vxlan-teardown.sh
members/nullnet-grpc-lib/: Cargo.toml  build.rs
members/nullnet-grpc-lib/proto/: nullnet_grpc.proto
members/nullnet-grpc-lib/src/: lib.rs
members/nullnet-grpc-lib/src/proto/: mod.rs  nullnet_grpc.rs
members/nullnet-proxy/: .env  Cargo.toml  linux-setup.sh  nullnet-proxy.service
members/nullnet-proxy/.cargo/: config.toml
members/nullnet-proxy/pingora-test/: Cargo.toml
members/nullnet-proxy/pingora-test/.cargo/: config.toml
members/nullnet-proxy/pingora-test/src/: main.rs
members/nullnet-proxy/src/: main.rs  nullnet_proxy.rs  port_mappings.rs  tcp_relay.rs  tls.rs  udp_relay.rs
members/nullnet-server/: .env  .gitignore  Cargo.toml  architecture.drawio  build.rs  graph.dot  linux-setup.sh  nullnet-server.service
members/nullnet-server/.cargo/: config.toml
members/nullnet-server/graphs/: sample-stack.dot
members/nullnet-server/services/: my-stack.toml  sample-stack.toml  services.toml
members/nullnet-server/src/: cert_renewal.rs  certs.rs  crypto.rs  env.rs  events.rs  geo.rs  graphviz.rs  http_server.rs  main.rs  net.rs  net_id_pool.rs  nullnet_grpc_impl.rs  orchestrator.rs  tests.rs  timeout.rs
members/nullnet-server/src/cert/: authority.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/: mod.rs
members/nullnet-server/src/cert/dns_providers/azure/: config.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/cloudflare/: config.rs
members/nullnet-server/src/cert/dns_providers/digitalocean/: config.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/godaddy/: config.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/google/: config.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/hetzner/: config.rs  mod.rs
members/nullnet-server/src/cert/dns_providers/namecheap/: config.rs  mod.rs
members/nullnet-server/src/http_server/: certificates.rs  chains.rs  config.rs  events_stream.rs  graph.rs  health.rs  mod.rs  nodes.rs  pool.rs  services.rs  sessions.rs  stacks.rs  static_files.rs
members/nullnet-server/src/services/: changes.rs  clients.rs  edge.rs  input.rs  mod.rs  service_info.rs
members/nullnet-server/tests/fixtures/backend_multi_replica/: after_disconnect_standalone_dep.dot  after_disconnect_swarm_host.dot  services.toml  start.dot
members/nullnet-server/tests/fixtures/backend_node_disconnected/: after_disconnect_backend_dep.dot  after_disconnect_initiator.dot  after_disconnect_proxy.dot  start.dot
members/nullnet-server/tests/fixtures/backend_reachability_changed/: after_lose_entry_point_A.dot  lose_entry_point_A.toml  services.toml  start.dot
members/nullnet-server/tests/fixtures/backend_service_unregistered/: after_drop_B.dot  after_drop_C.dot  after_drop_a2.dot  services.toml  start.dot
members/nullnet-server/tests/fixtures/dep_changed/: add_E_to_A.toml  after_add_E_to_A.dot  after_drop_C_from_A.dot  after_drop_all_from_D.dot  drop_C_from_A.toml  drop_all_from_D.toml  services.toml  start.dot  swap_C_for_E.toml
members/nullnet-server/tests/fixtures/max_networks/: after_first_client.dot  after_first_timeout.dot  after_proxy1_client.dot  after_proxy2_bypasses.dot  after_proxy_disconnect.dot  after_reuse.dot  after_second_timeout.dot  before_proxy_disconnect.dot  services.toml
members/nullnet-server/tests/fixtures/multi_replica/: after_b_different_ip_disconnect.dot  after_b_same_ip_disconnect.dot  after_first_step_disconnect.dot  after_full_disconnect.dot  after_partial_disconnect.dot  services.toml  start.dot
members/nullnet-server/tests/fixtures/node_disconnected/: after_disconnect_A_B.dot  after_disconnect_C.dot  after_disconnect_D.dot  after_disconnect_proxy1.dot  services.toml  start.dot
members/nullnet-server/tests/fixtures/proxy_branches/: remove_A.toml  services.toml
members/nullnet-server/tests/fixtures/proxy_timeout/: after_config_remove_timeout_A.dot  after_config_tighten_B.dot  after_timeout_A.dot  after_timeout_A_then_B.dot  after_timeout_all.dot  remove_timeout_A.toml  services.toml  start.dot  tighten_B.toml
members/nullnet-server/tests/fixtures/reachability_changed/: after_unreachable_B.dot  after_unreachable_D.dot  services.toml  start.dot  unreachable_B.toml  unreachable_D.toml
members/nullnet-server/tests/fixtures/service_removed/: after_remove_A.dot  after_remove_B.dot  remove_A.toml  remove_B.toml  services.toml
members/nullnet-server/tests/fixtures/service_unregistered/: after_drop_A.dot  after_drop_B.dot  after_drop_C.dot
members/nullnet-server/tests/fixtures/triggers_changed/: add_A_trigger.toml  after_drop_D_trigger.dot  after_remove_A_trigger.dot  after_swap_A_trigger.dot  drop_D_trigger.toml  remove_A_trigger.toml  services.toml  start.dot  swap_A_trigger.toml
members/nullnet-server/ui/: package-lock.json  vite.config.ts
members/nullnet-server/ui/src/: App.tsx  geo.ts  index.css  types.ts
members/nullnet-server/ui/src/components/: Layout.tsx
members/nullnet-server/ui/src/hooks/: useApi.ts  useDragResize.ts
members/nullnet-server/ui/src/pages/: Certificates.tsx  Config.tsx  Dashboard.tsx  Events.tsx  Nodes.tsx  Services.tsx  Sessions.tsx  Topology.tsx
(+28 files in other folders)
