[package]
name = "nullnet-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nullnet-firewall = { git = "https://github.com/GyulyVGC/nullnet-firewall.git" }
tun-rs = { version = "2.8.1", features = ["async_tokio"] }
etherparse = "0.19.0"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { workspace = true, features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time", "fs", "process"] }
notify.workspace = true
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
nullnet-liberror.workspace = true
nullnet-grpc-lib.workspace = true
ipnetwork = { workspace = true, features = ["serde"] }
toml.workspace = true
listeners = "0.5.1"
rtnetlink = "0.20.0"
futures = "0.3.32"
network-interface = "2.0.5"
gag.workspace = true
chrono.workspace = true
aya = "0.13"
libc = "0.2"
log = "0.4"