[package]
name = "nullnet-grpc-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC interface and generated types shared by the Nullnet binaries"
keywords = ["firewall", "network", "application", "centralized", "monitor"]
categories = ["network-programming"]

[dependencies]
tonic = { workspace = true, features = ["_tls-any", "tls-native-roots"] }
prost.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[badges]
maintenance = { status = "actively-developed" }
