[package]
name = "nullnet-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
pingora-core = { version = "0.8.0", features = ["openssl"] }
pingora-proxy = "0.8.0"
pingora-http = "0.8.0"
pingora-openssl = "0.8.0"
openssl = "0.10"
arc-swap = "1"
nullnet-grpc-lib.workspace = true
nullnet-liberror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "io-util", "macros"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
gag.workspace = true
chrono.workspace = true
