[package]
name = "nullnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
tonic = { workspace = true, features = ["_tls-any", "tls-native-roots"] }
prost.workspace = true
tonic-prost.workspace = true
nullnet-liberror.workspace = true
nullnet-grpc-lib.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
ctrlc = { version = "3.5.2", features = ["termination"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
uuid = { version = "1.23.0", features = ["v4"] }
ipnetwork.workspace = true
notify.workspace = true
gag.workspace = true
chrono.workspace = true
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.14"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
aes-gcm = "0.10"
base64 = "0.22"
x509-parser = "0.16"
# ACME (Let's Encrypt) cert issuance via DNS-01, ported from ../routix
anyhow = "1.0"
instant-acme = { version = "0.8", features = ["hyper-rustls"] }
reqwest = { version = "0.13", features = ["json", "query", "form"] }
openssl = "0.10"
quick-xml = "0.39"
aws-sdk-route53 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }

[build-dependencies]

